logs/Slang/generated/hdlconv/hdlconvertor_p732.sv.log
name: hdlconvertor_p732
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p732.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p732.sv:1:12: error: port 'a' has no I/O member declaration
module m1 (a,b);
           ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p732.sv:1:14: error: port 'b' has no I/O member declaration
module m1 (a,b);
             ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p732.sv:13:1: error: language feature not yet supported
defparam f1.A = 3.1415;
^~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p732.sv:14:1: error: language feature not yet supported
defparam f1.B = 3.1415;
^~~~~~~~~~~~~~~~~~~~~~~
